--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "lodash": "^4.17.21",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "randomstring": "^1.1.5",
     "tailwind-rn": "^3.0.1"
