--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.18.0",
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "checkenv": "^1.2.2",
